[package]
name = "liminal-ark-pnbr-poseidon-parameters"
version = "0.1.0"
edition = "2018"
authors = ["Penumbra <crates@penumbra.zone>", "redshiftzero <jen@penumbra.zone>"]
documentation = "https://docs.rs/liminal-ark-pnbr-poseidon-parameters"
license = "MIT OR Apache-2.0"
categories = ["cryptography"]
repository = "https://github.com/Cardinal-Cryptography/poseidon377"
description = "A crate for Poseidon parameters"

[dependencies]
anyhow = { version = "1", default-features = false }
ark-ff = { version = "^0.3.0", default-features = false }
num-integer = { version = "0.1.45", default-features = false }

[dev-dependencies]
ark-ed-on-bls12-377 = "0.3"
proptest = "1"

[features]
std = [
    "anyhow/std",
    "ark-ff/std",
    "num-integer/std",
]
